crates/dbdict/tests/snapshots/validate_spec__non_string_glossary_value.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 300
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-wspace/dbdict
glossary:
  term: 42
────────────────────────────────────────
error: [Q-1-11]
 --> dict.yaml:4:9
  |
4 |   term: 42
  |         ^^ Expected string, got integer
  |
  = help: Ensure the value is a string (quoted if it contains special characters)?
